hphp/hack/test/full_fidelity/cases/module_newtype_bad1.php
<?hh
<<file:__EnableUnstableFeatures("modules")>>
module foo;
newtype module Foo = int; // error
